--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.8.0",
     "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0"
